# trails-app

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: backend-ci.yml
backend/apps/accounts/: admin.py  apps.py  models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: test_models.py
backend/commands/: apps.py
backend/commands/management/commands/: init_local_env.py  lint.py  makemigrations.py  startapp.py
backend/config/: celery.py  settings.py  urls.py  utils.py
backend/utils/: storage_backends.py
backend/utils/db/: models.py
backend/utils/testing/: runner.py
